updated gitignore to properly ignore MLX42 files if they are not cleaned properly

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+# Basic stuff
 .*
 !.gitignore
+*.a
 *.o
 *.out
+
+# Project
 cub3D
-notes.txt
+
+# MLX42
+MLX42/build/CMakeFiles/mlx42.dir/lib/
+MLX42/build/CMakeFiles/mlx42.dir/mlx_frag_shader.c.o.d
+MLX42/build/CMakeFiles/mlx42.dir/mlx_vert_shader.c.o.d
+MLX42/build/CMakeFiles/mlx42.dir/src/
+MLX42/build/mlx_frag_shader.c
+MLX42/build/mlx_vert_shader.c
