working raycaster without textures

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ MLX42/build/CMakeFiles/mlx42.dir/mlx_vert_shader.c.o.d
 MLX42/build/CMakeFiles/mlx42.dir/src/
 MLX42/build/mlx_frag_shader.c
 MLX42/build/mlx_vert_shader.c
+
+# PNG
+*.png
